# DealerBackend

./: README.md  app-debug.apk  dealer_tablet_backend.cpp  dealer_tablet_backend.h
dealer_tablet/: settings.gradle
dealer_tablet/app/: build.gradle
dealer_tablet/app/src/androidTest/java/com/example/dealer_tablet/: ExampleInstrumentedTest.java
dealer_tablet/app/src/main/: AndroidManifest.xml
dealer_tablet/app/src/main/cpp/: CMakeLists.txt  dealer_backend.cpp  dealer_tablet_backend.cpp  dealer_tablet_backend.h
dealer_tablet/app/src/main/java/com/example/dealer_tablet/: MainActivity.java
dealer_tablet/app/src/main/res/layout/: activity_main.xml
dealer_tablet/app/src/main/res/values/: strings.xml
dealer_tablet/app/src/test/java/com/example/dealer_tablet/: ExampleUnitTest.java
dealer_tablet/gradle/wrapper/: gradle-wrapper.properties
